include/constantine_pasta.h

typedef __SIZE_TYPE__    size_t;
typedef __PTRDIFF_TYPE__ ptrdiff_t;
typedef __UINT8_TYPE__   uint8_t;
typedef size_t           secret_word;
typedef size_t           secret_bool;
typedef uint8_t          byte;
typedef struct { secret_word limbs[words_required(255)]; } pallas_fr;
typedef struct { secret_word limbs[words_required(255)]; } pallas_fp;
typedef struct { secret_word limbs[words_required(255)]; } vesta_fr;
typedef struct { pallas_fp x, y; } pallas_ec_aff;
typedef struct { pallas_fp x, y, z; } pallas_ec_jac;
typedef struct { pallas_fp x, y, z; } pallas_ec_prj;
void        ctt_pallas_fr_square_in_place(pallas_fr* a);
void        ctt_pallas_fr_div2(pallas_fr* a);
void        ctt_pallas_fr_inv(pallas_fr* r, const pallas_fr* a);
void        ctt_pallas_fr_inv_in_place(pallas_fr* a);
void        ctt_pallas_fr_ccopy(pallas_fr* a, const pallas_fr* b, const secret_bool ctl);
void        ctt_pallas_fr_cswap(pallas_fr* a, pallas_fr* b, const secret_bool ctl);
void        ctt_pallas_fr_cset_zero(pallas_fr* a, const secret_bool ctl);
void        ctt_pallas_fr_cset_one(pallas_fr* a, const secret_bool ctl);
void        ctt_pallas_fr_cneg_in_place(pallas_fr* a, const secret_bool ctl);
void        ctt_pallas_fr_cadd_in_place(pallas_fr* a, const pallas_fr* b, const secret_bool ctl);
void        ctt_pallas_fr_csub_in_place(pallas_fr* a, const pallas_fr* b, const secret_bool ctl);
void        ctt_pallas_fp_unmarshalBE(pallas_fp* dst, const byte src[], ptrdiff_t src_len);
void        ctt_pallas_fp_marshalBE(byte dst[], ptrdiff_t dst_len, const pallas_fp* src);
secret_bool ctt_pallas_fp_is_eq(const pallas_fp* a, const pallas_fp* b);
secret_bool ctt_pallas_fp_is_zero(const pallas_fp* a);
secret_bool ctt_pallas_fp_is_one(const pallas_fp* a);
secret_bool ctt_pallas_fp_is_minus_one(const pallas_fp* a);
void        ctt_pallas_fp_set_zero(pallas_fp* a);
void        ctt_pallas_fp_set_one(pallas_fp* a);
void        ctt_pallas_fp_set_minus_one(pallas_fp* a);
void        ctt_pallas_fp_neg(pallas_fp* r, const pallas_fp* a);
void        ctt_pallas_fp_neg_in_place(pallas_fp* a);
void        ctt_pallas_fp_sum(pallas_fp* r, const pallas_fp* a, const pallas_fp* b);
void        ctt_pallas_fp_add_in_place(pallas_fp* a, const pallas_fp* b);
void        ctt_pallas_fp_diff(pallas_fp* r, const pallas_fp* a, const pallas_fp* b);
void        ctt_pallas_fp_sub_in_place(pallas_fp* a, const pallas_fp* b);
void        ctt_pallas_fp_double(pallas_fp* r, const pallas_fp* a);
void        ctt_pallas_fp_double_in_place(pallas_fp* a);
void        ctt_pallas_fp_prod(pallas_fp* r, const pallas_fp* a, const pallas_fp* b);
void        ctt_pallas_fp_mul_in_place(pallas_fp* a, const pallas_fp* b);
void        ctt_pallas_fp_square(pallas_fp* r, const pallas_fp* a);
void        ctt_pallas_fp_square_in_place(pallas_fp* a);
void        ctt_pallas_fp_div2(pallas_fp* a);
void        ctt_pallas_fp_inv(pallas_fp* r, const pallas_fp* a);
void        ctt_pallas_fp_inv_in_place(pallas_fp* a);
void        ctt_pallas_fp_ccopy(pallas_fp* a, const pallas_fp* b, const secret_bool ctl);
void        ctt_pallas_fp_cswap(pallas_fp* a, pallas_fp* b, const secret_bool ctl);
void        ctt_pallas_fp_cset_zero(pallas_fp* a, const secret_bool ctl);
void        ctt_pallas_fp_cset_one(pallas_fp* a, const secret_bool ctl);
void        ctt_pallas_fp_cneg_in_place(pallas_fp* a, const secret_bool ctl);
void        ctt_pallas_fp_cadd_in_place(pallas_fp* a, const pallas_fp* b, const secret_bool ctl);
void        ctt_pallas_fp_csub_in_place(pallas_fp* a, const pallas_fp* b, const secret_bool ctl);
secret_bool ctt_pallas_fp_is_square(const pallas_fp* a);
void        ctt_pallas_fp_invsqrt(pallas_fp* r, const pallas_fp* a);
secret_bool ctt_pallas_fp_invsqrt_in_place(pallas_fp* r, const pallas_fp* a);
void        ctt_pallas_fp_sqrt_in_place(pallas_fp* a);
secret_bool ctt_pallas_fp_sqrt_if_square_in_place(pallas_fp* a);
void        ctt_pallas_fp_sqrt_invsqrt(pallas_fp* sqrt, pallas_fp* invsqrt, const pallas_fp* a);
secret_bool ctt_pallas_fp_sqrt_invsqrt_if_square(pallas_fp* sqrt, pallas_fp* invsqrt, const pallas_fp* a);
secret_bool ctt_pallas_fp_sqrt_ratio_if_square(pallas_fp* r, const pallas_fp* u, const pallas_fp* v);
secret_bool ctt_pallas_ec_aff_is_eq(const pallas_ec_aff* P, const pallas_ec_aff* Q);
void        ctt_pallas_ec_aff_ccopy(pallas_ec_aff* P, const pallas_ec_aff* Q, const secret_bool ctl);
secret_bool ctt_pallas_ec_aff_is_on_curve(const pallas_fp* x, const pallas_fp* y);
void        ctt_pallas_ec_aff_neg(pallas_ec_aff* P, const pallas_ec_aff* Q);
void        ctt_pallas_ec_aff_neg_in_place(pallas_ec_aff* P);
secret_bool ctt_pallas_ec_jac_is_eq(const pallas_ec_jac* P, const pallas_ec_jac* Q);
void        ctt_pallas_ec_jac_ccopy(pallas_ec_jac* P, const pallas_ec_jac* Q, const secret_bool ctl);
void        ctt_pallas_ec_jac_neg(pallas_ec_jac* P, const pallas_ec_jac* Q);
void        ctt_pallas_ec_jac_neg_in_place(pallas_ec_jac* P);
void        ctt_pallas_ec_jac_cneg_in_place(pallas_ec_jac* P, const secret_bool ctl);
void        ctt_pallas_ec_jac_sum(pallas_ec_jac* r, const pallas_ec_jac* P, const pallas_ec_jac* Q);
void        ctt_pallas_ec_jac_add_in_place(pallas_ec_jac* P, const pallas_ec_jac* Q);
void        ctt_pallas_ec_jac_diff(pallas_ec_jac* r, const pallas_ec_jac* P, const pallas_ec_jac* Q);
void        ctt_pallas_ec_jac_double(pallas_ec_jac* r, const pallas_ec_jac* P);
void        ctt_pallas_ec_jac_double_in_place(pallas_ec_jac* P);
void        ctt_pallas_ec_jac_affine(pallas_ec_aff* dst, const pallas_ec_jac* src);
void        ctt_pallas_ec_jac_from_affine(pallas_ec_jac* dst, const pallas_ec_aff* src);
secret_bool ctt_pallas_ec_prj_is_eq(const pallas_ec_prj* P, const pallas_ec_prj* Q);
void        ctt_pallas_ec_prj_ccopy(pallas_ec_prj* P, const pallas_ec_prj* Q, const secret_bool ctl);
void        ctt_pallas_ec_prj_neg(pallas_ec_prj* P, const pallas_ec_prj* Q);
void        ctt_pallas_ec_prj_neg_in_place(pallas_ec_prj* P);
void        ctt_pallas_ec_prj_cneg_in_place(pallas_ec_prj* P, const secret_bool ctl);
void        ctt_pallas_ec_prj_sum(pallas_ec_prj* r, const pallas_ec_prj* P, const pallas_ec_prj* Q);
void        ctt_pallas_ec_prj_add_in_place(pallas_ec_prj* P, const pallas_ec_prj* Q);
void        ctt_pallas_ec_prj_diff(pallas_ec_prj* r, const pallas_ec_prj* P, const pallas_ec_prj* Q);
void        ctt_pallas_ec_prj_double(pallas_ec_prj* r, const pallas_ec_prj* P);
void        ctt_pallas_ec_prj_double_in_place(pallas_ec_prj* P);
void        ctt_pallas_ec_prj_affine(pallas_ec_aff* dst, const pallas_ec_prj* src);
void        ctt_pallas_ec_prj_from_affine(pallas_ec_prj* dst, const pallas_ec_aff* src);